# hostile-takeover

./: .gitignore  LICENSE.txt  README.md
AniMax/: AboutForm.cs  AboutForm.resources  AboutForm.resx  AniMax.cs  AniMax.csproj  AniMax.doc  AniMax.sln  AnimDoc.cs  BitmapsForm.cs  BitmapsForm.resources  BitmapsForm.resx  CombinerForm.cs  CombinerForm.resources  CombinerForm.resx  Frame.cs  FrameControl.cs  Globals.cs  MainForm.cs  MainForm.resources  MainForm.resx  MiscControls.cs  OptionsForm.cs  OptionsForm.resources  PerPixelAlphaForm.cs  PreviewControl.cs  PreviewControl.resources  PreviewControl.resx  PreviewForm.cs  PreviewForm.resx  PreviewPanel.cs  PreviewPanel.resources  PreviewPanel.resx  ReplaceColorsForm.cs  ReplaceColorsForm.resources  ReplaceColorsForm.resx  Strip.cs  StripControl.cs  StripControl.resources  StripControl.resx  StripForm.cs  (+26 more)
BmpProof/: BmpProof.cs  BmpProof.csproj  BmpProof.sln  deploy.bat
MarkVersion/: Class1.cs  MarkVersion.csproj  MarkVersion.sln
Schemer/: Form1.cs  Form1.resx  Schemer.csproj  Schemer.sln  SerialStream.cs  todo.txt
SpiffLib/: AudioFormats.cs  PdbPacker.cs  binarytree.cs  bitmapraw.cs  compressor.cs  doublerect.cs  ini.cs  misc.cs  palette.cs  palmdatabase.cs  tbitmap.cs  tbitmapkey.cs  tbitmapsr.cs  tbitmaptools.cs
StringTable/: Class1.cs  StringTable.csproj  StringTable.sln
TemplateExtractor/: .cvsignore  TemplateExtractor.cs  TemplateExtractor.csproj  TemplateExtractor.sln  deploy.bat
acrunch/: acrunch.cs  acrunch.csproj  acrunch.sln  deploy.bat  deploy.sh
aed/: AED.cs  AED.csproj  AED.sln  AnimSet.cs  Gui.cs  Gui.resx  PropertyInspector.cs  PropertyInspector.resx  Script.cs  ScriptEditor.cs  ScriptEditor.resx  deploy.bat  licenses.licx
amx2zamx/: amx2zamx.cs  amx2zamx.csproj  amx2zamx.sln  deploy.bat
ani2amx/: ani2amx.cs  ani2amx.csproj  ani2amx.sln
archive/: 2bpp.pal  8bpp.pal
assets/: Hostile Takeover level design concepts from Rob.doc  iphone_icon.psd
base/: base64.cpp  base64.h  bytebuffer.cpp  bytebuffer.h  criticalsection.h  deletetracker.cpp  deletetracker.h  dispatcher.h  epollserver.cpp  epollserver.h  eventer.cpp  eventer.h  format.cpp  format.h  log.h  md5.h  md5c.cpp  messagehandler.cpp  messagehandler.h  messagequeue.cpp  messagequeue.h  misc.cpp  misc.h  selectserver.cpp  selectserver.h  sigslot.h  socket.cpp  socket.h  socketaddress.cpp  socketaddress.h  socketserver.cpp  socketserver.h  thread.cpp  thread.h  tick.cpp  tick.h
bcr2/: Class1.cs  ShowForm.resources  bcr2.csproj  bcr2.sln  deploy.bat  showform.cs  showform.resx
bcrunch/: .cvsignore  bcrunch.dsp  main.cpp  win32_rle.txt
bscale/: bscale.cs  bscale.csproj  bscale.sln  deploy.bat
data/: .cvsignore  .gitignore  C_02.ld  C_03.ld  C_04.ld  C_05.ld  D_03-sample.ld  D_03.ld  GobTemplates.ini.pp  M_04.ld  M_07.ld  M_09.ld  M_11.ld  M_13.ld  M_14.ld  M_16.ld  M_17.ld  M_18.ld  S_00.ld  S_01-sample.ld  S_01.ld  S_02-sample.ld  S_08.ld  S_09.ld  S_10.ld  S_12.ld  TestBmpColors.bat  TestLevel.ld  all.sfx  c_01.ld  desert.tc  forms.ini.pp  game.ini.pp  grassy.tc  grassyNames.txt  help.txt  helpiphone-multiplayer.txt  helpiphone.txt  level1.lvl.pp  m_01.ld  (+30 more)
drmutil/: README.txt  drmutil.sln  drmutil.vcproj  main.cpp
font/: fontmap.py  fontutils.py  glyphpos.py
game/: .cvsignore  .gitignore  Andy.cpp  Animation.cpp  Artillery.cpp  BuildMgr.cpp  Builder.cpp  CutScene.cpp  DebugHelpers.cpp  Ecom.cpp  GameObjects.cpp  GameOptions.cpp  HRC.cpp  Headquarters.cpp  Help.cpp  InputUI.cpp  LRInfantry.cpp  Level.cpp  Makefile.iphone  Miner.cpp  MobileBuilder.cpp  MobileHQ.cpp  MobileUnit.cpp  Multiplayer.cpp  Overmind.cpp  Player.cpp  Processor.cpp  README.txt  Radar.cpp  RawBitmap.cpp  Reactor.cpp  Replicator.cpp  Research.cpp  SRInfantry.cpp  Shell.cpp  SimUI.cpp  Simulation.cpp  SocTransport.cpp  SocTransport.h  SpInfantry.cpp  (+135 more)
game/sdl/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
game/sdl/android/app/src/main/: AndroidManifest.xml
game/sdl/android/app/src/main/cpp/: androidchatcontroller.cpp  hosthelpers.cpp
game/sdl/android/app/src/main/java/com/spiffcode/ht/: ChatController.java  GameActivity.java  NativeLib.java  WIWebDialog.java
game/sdl/android/app/src/main/res/layout/: chat_listview_row.xml  wi_web_dialog.xml
game/sdl/android/app/src/main/res/values/: strings.xml
inc/: AdnDebugMgr.h  BtIfClasses.h  BtIfClasses13.h  BtIfDefinitions.h  BtIfDefinitions13.h  BtIfObexHeaders.h  BtSdkCE.h  MQCommon.h  MQGX.h  MQGX.prc  PalmGoLCD.h  PalmPin.h  PalmStatusBar.h  SonyErrorBase.h  SonyHRLib.h  SonySilkLib.h  SonySystemFtr.h  SonySystemResources.h  SonyTypes.h  TwDefs.h  TwError.h  TwGfx.h  TwTraps.h  basictypes.h  hostcontrol.h  rip.cpp  rip.h  sonyhwroemids.h  sys_types.h
inicrunch/: Makefile  ini.cpp  ini.h  inicrunch.sln  inicrunch.vcproj  main.cpp  make.sh
legacy/: updAuthorKit.bat
m/: AboutForm.cs  AboutForm.resources  AboutForm.resx  Area.cs  CaBase.cs  CaNew.cs  CaNew.resources  CaNew.resx  CaPropForm.cs  CaPropForm.resources  CaPropForm.resx  CaTypeUnitTypesForm.cs  CaTypeUnitTypesForm.resources  CaTypeUnitTypesForm.resx  CaTypeUpgradeTypesForm.cs  CaTypeUpgradeTypesForm.resources  CaTypeUpgradeTypesForm.resx  CaTypes.cs  Counter.cs  CountersForm.cs  Doc.cs  EditCommentsForm.cs  EditCommentsForm.resources  EditCommentsForm.resx  EditLevelTextForm.cs  EditLevelTextForm.resources  EditLevelTextForm.resx  EditRichTextForm.cs  EditRichTextForm.resources  EditRichTextForm.resx  EditStringForm.cs  EditStringForm.resources  EditStringForm.resx  EditTerrainForm.resources  FindLevelTextForm.cs  FindLevelTextForm.resources  FindLevelTextForm.resx  FlowPanel.resources  Form1.cs  Form1.resources  (+73 more)
mpshared/: constants.h  decompress.cpp  decompress.h  enum.h  indexloader.cpp  indexloader.h  ini.cpp  ini.h  messages.cpp  messages.h  misc.cpp  misc.h  mpht.h  netmessage.cpp  netmessage.h  packfile.cpp  packfile.h  packinfomanager.cpp  packinfomanager.h  packmanager.cpp  packmanager.h  pdbreader.h  side.h  xmsg.h  xmsglog.cpp  xmsglog.h  xpump.cpp  xpump.h
packpdb2/: .cvsignore  Class1.cs  deploy.bat  packpdb2.csproj  (+1 more)
(+524 files in other folders)
